--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -7,7 +7,7 @@
     
 </div>
 <div app-h2 id="sign-up-now" app-fade-in [delay]='2000'>Sign Up Now</div>
-<form id="form">
+<form id="form" class="block">
     <div class="form-block">
         <label for="institution">Institution Name</label>
         <input #institution name="institution" />
@@ -20,4 +20,5 @@
         <label for="institution">Your Password</label>
         <input #password name="password" />
     </div>
+    <button class="button">Create your Account</button>
 </form>
