--- a/src/app/form/form.component.less
+++ b/src/app/form/form.component.less
@@ -13,3 +13,37 @@
         margin : 0;
     }
 }
+
+
+.form-block{
+    text-align: left;
+    max-width : 50rem;
+    label{
+        font-size: 1.4rem;
+        font-weight: 600;
+        line-height: 1.9rem;
+        color: #3C3F48;
+        display : block;
+        margin : 2rem 0 1.5rem;
+    }
+    input{
+        border-radius: 2px;
+        height : 5rem;
+        width : 100%;
+        background-color: #F7F7F7;
+        border: 1px solid #D7D7D7;
+        font-size: 1.5rem;
+        padding : 1.5rem 2rem;
+        &:focus{
+            background-color: #FFF;
+            border: 1px solid #C3C3C3;
+            box-shadow: 0 0 4px 0 rgba(0,0,0,0.22);
+        }
+    }
+    
+}
+button{
+    margin-top: 5rem;
+    width : 100%;
+    max-width : 50rem;
+}
