Input outline none

--- a/src/app/form/form.component.less
+++ b/src/app/form/form.component.less
@@ -34,6 +34,7 @@
         border: 1px solid #D7D7D7;
         font-size: 1.5rem;
         padding : 1.5rem 2rem;
+        outline : none;
         &:focus{
             background-color: #FFF;
             border: 1px solid #C3C3C3;
