Form password input style

--- a/src/app/form/form.component.less
+++ b/src/app/form/form.component.less
@@ -40,6 +40,11 @@
             border: 1px solid #C3C3C3;
             box-shadow: 0 0 4px 0 rgba(0,0,0,0.22);
         }
+        &[type=password]{
+            color: #8A8A8A;
+            margin : 0.5rem 0;
+            font-size: 4rem;
+        }
     }
     
 }
