--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -7,7 +7,7 @@
     
 </div>
 <div app-h2 id="sign-up-now" app-fade-in [delay]='2000'>Sign Up Now</div>
-<form id="form" class="block">
+<form id="form" class="block" app-fade-in [delay]='2000'>
     <div class="form-block">
         <label for="institution">Institution Name</label>
         <input #institution name="institution" />
@@ -18,7 +18,7 @@
     </div>
     <div class="form-block">
         <label for="institution">Your Password</label>
-        <input #password name="password" />
+        <input #password name="password" type="password" />
     </div>
     <button class="button">Create your Account</button>
 </form>
