--- a/src/assets/less/rules.less
+++ b/src/assets/less/rules.less
@@ -8,6 +8,7 @@
 @clr-gray : #F6F8F8;
 @clr-darkgray : #3C3F48;
 @clr-darkgray2 : #313339;
+@deep: ~">>>"; 
 
 @keyframes title-in {
     0% {  opacity : 0; top : -4rem;   }
