--- a/src/app/shared/carousel/carousel.component.less
+++ b/src/app/shared/carousel/carousel.component.less
@@ -14,7 +14,7 @@
     display : flex;
     flex-direction: column;
 }
-:host /deep/ .carousel{
+:host @{deep} .carousel{
     width : 100%;
     overflow : hidden;
     flex-shrink: 0;
