--- a/src/app/shared/devices/devices.component.less
+++ b/src/app/shared/devices/devices.component.less
@@ -1,3 +1,4 @@
+@import "../../../assets/less/rules.less";
 
 @keyframes computer-in {
     0% { bottom : -2rem; opacity : 0; }
@@ -75,7 +76,7 @@
         height : 6rem;
         bottom : 5.5rem;
         right : calc(~"50% - 5rem");
-        /deep/ .button{
+        @{deep} .button{
             display : none;
         }
     }
@@ -184,7 +185,7 @@
         height: 7rem;
         width: 4rem;
         left: 5rem;
-        /deep/ .button{
+        @{deep} .button{
             display : none;
         }
     }
