--- a/src/assets/less/fade-in.less
+++ b/src/assets/less/fade-in.less
@@ -1,3 +1,5 @@
+@import "rules.less";
+
 [app-fade-in]{
     transition: opacity 1s ease-in;
     animation-play-state: paused ;   
@@ -7,7 +9,7 @@
     opacity : 0;
     &.show{
         opacity : 1;
-        *, /deep/ *{
+        *, @{deep} *{
             animation-play-state: running !important;        
         }
     }
