--- a/src/app/form/form.component.less
+++ b/src/app/form/form.component.less
@@ -35,7 +35,7 @@
         font-size: 1.5rem;
         padding : 1.5rem 2rem;
         outline : none;
-        &:focus, &:required, &:invalid {
+        &:focus, &:required, &:invalid, &:valid {
             box-shadow: 0 0 4px 0 rgba(0,0,0,0.22);
         }
         &:focus {
