--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -80,7 +80,7 @@
         <b>You can try our product.</b><br/>
         Start your 30-day free trial for one course today!
     </p>
-    <button class='button'>
+    <button class='button' [routerLink]="['/contact-us']">
         Start 30-day free trial
     </button>
 </div>
