--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -9,10 +9,10 @@
         <div class="dropdown-content">
             <div [routerLink]="['/product']">See our Product</div>
             <div [routerLink]="['/pricing']">Pricing</div>
-            <div>Support</div>
+            <a target="_blank" href="http://help.twic.community">Support</a>
             <div [routerLink]="['/about']">About</div>
-            <div>Download App IOS</div>
-            <div>Download App Android</div>
+            <a target="_blank" href="https://itunes.apple.com/fr/app/twic-the-world-is-a-campus/id1165444530?l=en&mt=8">Download App IOS</a>
+            <a target="_blank" href="https://play.google.com/store/apps/details?id=com.thestudnet.app">Download App Android</a>
             <div>Status</div>
             <div>
                 <img class="footer-logo" src="assets/images/Logo-white.png"/>
@@ -31,23 +31,23 @@
         <ul>
             <li [routerLink]="['/product']">Product</li>
             <li [routerLink]="['/pricing']">Pricing</li>
-            <li>Support</li>
+            <li> <a target="_blank" href="http://help.twic.community">Support</a></li>
         </ul>
     </div>
     <div class="footer-column desktop">
         <div class="footer-title">Twic</div> 
         <ul>
             <li [routerLink]="['/about']">About</li>
-            <li>Download App IOS</li>
-            <li>Download App Android</li>
-            <li>Status</li>
+            <li> <a target="_blank" href="https://itunes.apple.com/fr/app/twic-the-world-is-a-campus/id1165444530?l=en&mt=8">Download App IOS</a></li>
+            <li> <a target="_blank" href="https://play.google.com/store/apps/details?id=com.thestudnet.app">Download App Android</a></li>
+            <li> <a target="_blank" href="http://status.thestudnet.com/">Status</a></li>
         </ul>
     </div>
    
     <div class="footer-column desktop">
         <div class="footer-title">Contact us</div>
-        <span class="icon icon-facebook social-media"></span>
-        <span class="icon icon-twitter social-media"></span>
-        <span class="icon icon-linkedin2 social-media"></span>
+        <a target="_blank" href="https://www.facebook.com/thestudnetinc"><span class="icon icon-facebook social-media"></span></a>
+        <a target="_blank" href="https://twitter.com/thestudnet"><span class="icon icon-twitter social-media"></span></a>
+        <a target="_blank" href="https://fr.linkedin.com/company/the-st-dnet"><span class="icon icon-linkedin2 social-media"></span></a>
     </div>
 </div>
