--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -16,7 +16,7 @@
         </div>
         <div [routerLink]="['/product']">Product</div>
         <div [routerLink]="['/pricing']">Pricing</div>
-        <div>Support</div>
+        <div><a target="_blank" href="http://help.twic.community">Support</a></div>
         <div [routerLink]="['/about']">About</div>
     </div>
 </div>
@@ -27,6 +27,6 @@
 <ul class="header-menu desktop">
     <li  [routerLink]="['/product']" routerLinkActive="current">Product</li>
     <li  [routerLink]="['/pricing']" routerLinkActive="current">Pricing</li>
-    <li>Support</li>
+    <li> <a target="_blank" href="http://help.twic.community">Support</a></li>
     <li  [routerLink]="['/about']" routerLinkActive="current">About</li>
 </ul>
