--- a/src/app/shared/footer/footer.component.less
+++ b/src/app/shared/footer/footer.component.less
@@ -16,6 +16,10 @@
         max-width : 110rem;
         display : flex;
         margin : 0 auto;
+        a, a:hover{
+            color : white;
+            text-decoration: none;
+        }
         .dropdown-toggle{
             height : 5rem;
             line-height: 5rem;
@@ -62,6 +66,7 @@
         @media(max-width : 1023px){
             flex-direction : column;
         }
+        
     }
 }
 
