--- a/src/app/shared/header/header.component.less
+++ b/src/app/shared/header/header.component.less
@@ -5,6 +5,10 @@
     max-width: 110rem;
     margin : 3rem auto 0 auto;
     padding : 0 1rem;
+    a, a:hover{
+        color : @clr-text;
+        text-decoration: none;
+    }
     .header-logo{
         margin-right: auto;
         margin-left : 1rem;
