--- a/src/app/form/form.component.less
+++ b/src/app/form/form.component.less
@@ -26,7 +26,7 @@
         display : block;
         margin : 2rem 0 1.5rem;
     }
-    input{
+    input:required, input::invalid, input::valid{
         border-radius: 2px;
         height : 5rem;
         width : 100%;
@@ -35,12 +35,10 @@
         font-size: 1.5rem;
         padding : 1.5rem 2rem;
         outline : none;
-        &:focus, &:required, &:invalid, &:valid {
-            box-shadow: 0 0 4px 0 rgba(0,0,0,0.22);
-        }
         &:focus {
             background-color: #FFF;
             border: 1px solid #C3C3C3;
+            box-shadow: 0 0 4px 0 rgba(0,0,0,0.22);
         }
         &[type=password]{
             color: #8A8A8A;
