--- a/src/app/form/form.component.less
+++ b/src/app/form/form.component.less
@@ -26,7 +26,7 @@
         display : block;
         margin : 2rem 0 1.5rem;
     }
-    input, input:required, input::invalid, input::valid{
+    input, input:required, input:invalid, input:valid{
         border-radius: 2px;
         height : 5rem;
         width : 100%;
