htaccess in build

--- a/src/app/form/form.component.less
+++ b/src/app/form/form.component.less
@@ -30,13 +30,13 @@
         border-radius: 2px;
         height : 5rem;
         width : 100%;
-        background-color: #F7F7F7;
+        background-color: #F7F7F7 !important;
         border: 1px solid #D7D7D7;
         font-size: 1.5rem;
         padding : 1.5rem 2rem;
         outline : none;
         &:focus {
-            background-color: #FFF;
+            background-color: #FFF !important;
             border: 1px solid #C3C3C3;
             box-shadow: 0 0 4px 0 rgba(0,0,0,0.22);
         }
