--- a/src/styles.less
+++ b/src/styles.less
@@ -40,7 +40,7 @@ body{
     width : 100%;
     max-width : 110rem;
     margin : 0 auto;
-    overflow-x: hidden;
+    overflow: hidden;
     @media(max-width : 1100px){
         padding : 0 1rem;
     }
