style mobile fix

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -16,7 +16,7 @@
         </div>
         <div [routerLink]="['/product']">Product</div>
         <div [routerLink]="['/pricing']">Pricing</div>
-        <div><a target="_blank" href="http://help.twic.community">Support</a></div>
+        <a target="_blank" href="http://help.twic.community">Support</a>
         <div [routerLink]="['/about']">About</div>
     </div>
 </div>
