style mobile fix

--- a/src/app/shared/header/header.component.less
+++ b/src/app/shared/header/header.component.less
@@ -22,7 +22,7 @@
         margin : 0;
         .menu-icon{
             position : absolute;
-            top : 0;
+            top : 2rem;
             left : 2.5rem;
             cursor : pointer;
         }
