style mobile fix

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,5 @@
 <div app-wave></div>
-<div id="monaco-background"></div>
+<div id="monaco-background" app-fade-in [delay]="2500"></div>
 <div class="block" id="first-block">
     <h1>The world is a campus.</h1>
     <p>
@@ -17,7 +17,7 @@
         <b>Principality of Monaco</b> has for many years been working towards and promoting a better world, placing the 
         <b>United Nations Millenium Development Goals</b> at the heart of it's foreign policy.
 </div>
-<div class="block" id="adress" app-fade-in >
+<div class="block" id="adress" app-fade-in  [delay]="2000">
     <img class="twic-logo"  src="assets/images/Logo.svg"/>
     <div class="by">by</div>
     <img class="studnet-logo"  src="assets/images/studnet.png"/>
