--- a/src/app/about/about.component.less
+++ b/src/app/about/about.component.less
@@ -29,7 +29,7 @@
 }
 
 #adress{
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     .twic-logo{
         margin-top: 4rem;
         height : 4rem;
@@ -43,6 +43,7 @@
         line-height: 2.6rem;
     }
     .studnet-logo{
+        height : 2rem;
         margin-bottom : 0.5rem;
     }
     .monaco-logo{
