--- a/src/app/product/product.component.less
+++ b/src/app/product/product.component.less
@@ -166,7 +166,7 @@
     height : 75rem;
     width : 100%;
     max-width: 110rem;
-    margin-top  : 8rem;
+    margin  : 8rem 0;
     @media(min-width : 1024px){
         [app-h2]{
             margin : 17rem 0 7rem;
