style mobile fix

--- a/src/app/product/product.component.less
+++ b/src/app/product/product.component.less
@@ -233,6 +233,7 @@
         border-radius: 2px;
         margin : auto;
          @media(min-width : 1024px){
+            padding: 2rem 1rem 1rem;
             &#share-collaborate{
                 margin-right : 4rem;
                 animation-delay : 2s;
