style mobile fix

--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -61,7 +61,7 @@
                     innovation in higher education. Our state-of-the-art
                     L.M.S enables to distribute online, blended courses over the internet as well as 
                     to augment on-campus teaching in a brick and mortar environment.</p>
-                <div id="product"></div>
+                <div class="product" id="product-1" ></div>
             </div>
             
             <div  carousel-page class="column-block">
@@ -70,7 +70,7 @@
                     Our disruptive technology allows to create a connected, engaged and 
                     collaborative learning experience for students and faculty across the world.
                 </p>
-                <div id="product"></div>
+                <div class="product" id="product-2" ></div>
             </div>
             <div  carousel-page class="column-block">
                 <b>Videoconferencing system</b>
@@ -78,7 +78,7 @@
                    Our all-in-one platform make it easy to launch one-on- one, group calls or live classes without 
                    needing to open another app or share invite links.
                 </p>
-                <div id="product"></div>
+                <div class="product" id="product-3" ></div>
             </div>
             <div  carousel-page class="column-block">
                 <b>Data collection</b>
@@ -86,7 +86,7 @@
                    We use the latest forward-looking algorithms in human-technology 
                    tracking to measure Assurance of Learning and online engagement.
                 </p>
-                <div id="product"></div>
+                <div class="product" id="product-4" ></div>
             </div>
         </div>
        
