--- a/src/app/product/product.component.less
+++ b/src/app/product/product.component.less
@@ -169,7 +169,7 @@
     margin  : 8rem 0;
     @media(min-width : 1024px){
         [app-h2]{
-            margin : 17rem 0 7rem;
+            margin : 17rem 0 10rem;
         }
     }
     @media(max-width : 1023px){
@@ -223,8 +223,8 @@
     .planetarium-block{
         width : 100%;
         max-width: 40rem;
-        min-height: 22rem;
-        padding: 2rem 2rem 1rem;
+        min-height: 20rem;
+        padding: 2rem;
         opacity : 0;
         animation : planetarium-block 2s forwards;
         background: linear-gradient(180deg, #FFFFFF 0%, rgba(255,255,255,0.5) 100%);
@@ -233,7 +233,6 @@
         border-radius: 2px;
         margin : auto;
          @media(min-width : 1024px){
-            padding: 2rem 1rem 1rem;
             &#share-collaborate{
                 margin-right : 4rem;
                 animation-delay : 2s;
@@ -245,6 +244,7 @@
             }
         }
         @media(max-width : 1023px){
+            padding: 2rem 1rem 1rem;
             text-align : center;
             &#share-collaborate{
                 margin-bottom : 2rem;
