style mobile fix

--- a/src/app/product/product.component.less
+++ b/src/app/product/product.component.less
@@ -218,6 +218,7 @@
          display : flex;
          @media(max-width : 1023px){
             flex-direction : column;
+            padding : 0 1rem;
          }
     }
     .planetarium-block{
