Add swipe on carousel

--- a/src/app/shared/carousel/carousel.component.html
+++ b/src/app/shared/carousel/carousel.component.html
@@ -1,5 +1,5 @@
 <div class="carousel">
-    <div  class="carousel-content" >
+    <div  class="carousel-content" (swipeleft)="swipe($event.type)" (swiperight)="swipe($event.type)"  >
         <ng-content></ng-content>
         
     </div> 
