--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -2,6 +2,8 @@
 
 @keyframes circle {
     0% { opacity : 0; margin-right:-40rem; margin-top : -40rem; }
+    80% { opacity : 1; margin-right : 0.5rem; margin-top : 0.5rem;  }
+    90% { opacity : 1; margin-right : -.2rem; margin-top : -.2rem;  }
     100% { opacity : 1; margin-right : 0; margin-top : 0;  }
 }
 
@@ -10,14 +12,18 @@
 }
 
 [app-planetarium]{
-    top : -4rem;
+    top : 0rem;
     right : 0;
     left : 0;
     height : 85rem;
     @{deep} .circle{
         margin-right:-40rem; 
         margin-top : -40rem;
-        animation : circle 2s 500ms forwards;
+        animation : circle 2.5s 500ms cubic-bezier(0.6, 0.4, 0.6, 1.3) forwards;
+        &#circle-1{ animation-delay: 600ms;}
+        &#circle-2{ animation-delay: 700ms;}
+        &#circle-3{ animation-delay: 800ms;}
+        &#circle-4{ animation-delay: 900ms;}
     }
 }
 
