--- a/src/app/shared/planetarium/planetarium.component.html
+++ b/src/app/shared/planetarium/planetarium.component.html
@@ -5,7 +5,7 @@
             top : -circle.radius + center[1], 
             right : -circle.radius  + center[0],   
             'box-shadow' : circle.shadow,
-            'opacity' :  circle.opacity ,
+            'border' :  'solid 1px rgba(226,226,226, ' + circle.opacity + ')',
             width : circle.radius * 2, 
             height : circle.radius * 2
         }" id="circle-{{ i }}" >
