Carousel swipe animation

--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -7,8 +7,8 @@
     </p>
     
 </div>
-<div app-h2 id="choose-you-plan" app-fade-in [delay]='2000'>Choose your plan</div>
-<div class="block table-block" app-fade-in [delay]='2000'>
+<div app-h2 id="choose-you-plan" app-fade-in [delay]='1500'>Choose your plan</div>
+<div class="block table-block" app-fade-in [delay]='1500'>
     <div class="table">
         <div class="white column">
             <div class="title">Course</div>
@@ -69,7 +69,7 @@
         </div>
     </div>
 </div>
-<div class="block" id="our-pricing" app-fade-in>
+<div class="block" id="our-pricing" app-fade-in [delay]='1500'>
     <p>
         Any question about <b>our pricing</b>? Feel free to <b><u>contact us</u></b>, we're more than happy to help.
     </p>
