--- a/src/app/product/product.component.less
+++ b/src/app/product/product.component.less
@@ -2,42 +2,62 @@
  
 @keyframes circle-0 {
     0% { opacity : 0; margin-right : 2rem; margin-top : 2rem; height : 12rem; width : 12rem; }
+    80% { opacity : 1; margin-right : -0.5rem; margin-top : -0.5rem; height : 17rem; width : 17rem; }
+    90% { opacity : 1; margin-right : 0.2rem; margin-top : 0.2rem; height : 15.6rem; width : 15.6rem; }
     100% { opacity : 1; margin-right : 0; margin-top : 0; height : 16rem; width : 16rem; }
 }
 @keyframes small-circle-0 {
     0% { opacity : 0; margin-right : 1.5rem; margin-top : 1.5rem; height : 7rem; width : 7rem; }
+    80% { opacity : 1; margin-right : -0.5rem; margin-top : -0.5rem; height : 11rem; width : 11rem; }
+    90% { opacity : 1; margin-right : 0.2rem; margin-top : 0.2rem; height : 9.6rem; width : 9.6rem; }
     100% { opacity : 1; margin-right : 0; margin-top : 0; height : 10rem; width : 10rem; }
 }
 @keyframes circle-1 {
     0% {  opacity : 0; margin-right : 3.5rem; margin-top : 3.5rem;  height : 22rem; width : 22rem; }
+    80% { opacity : 1; margin-right : -0.5rem; margin-top : -0.5rem; height : 30rem; width : 30rem; }
+    90% { opacity : 1; margin-right : 0.2rem; margin-top : 0.2rem; height : 28.6rem; width : 28.6rem; }
     100% {  opacity : 1; margin-right : 0; margin-top : 0; height : 29rem; width : 29rem; }
 }
 @keyframes small-circle-1 {
     0% { opacity : 0; margin-right : 3rem; margin-top : 3rem; height : 14rem; width : 14rem; }
+    80% { opacity : 1; margin-right : -0.5rem; margin-top : -0.5rem; height : 21rem; width : 21rem; }
+    90% { opacity : 1; margin-right : 0.2rem; margin-top : 0.2rem; height : 19.6rem; width : 19.6rem; }
     100% { opacity : 1; margin-right : 0; margin-top : 0; height : 20rem; width : 20rem; }
 }
 @keyframes circle-2 {
     0% { opacity : 0; margin-right : 5rem; margin-top : 5rem;  height : 32rem; width : 32rem; }
+    80% { opacity : 1; margin-right : -0.5rem; margin-top : -0.5rem; height : 43rem; width : 43rem; }
+    90% { opacity : 1; margin-right : 0.2rem; margin-top : 0.2rem; height : 41.6rem; width : 41.6rem; }
     100% { opacity : 1; margin-right : 0; margin-top : 0; height : 42rem; width : 42rem; }
 }
 @keyframes small-circle-2 {
     0% { opacity : 0; margin-right : 4rem; margin-top : 4rem; height : 22rem; width : 22rem; }
+    80% { opacity : 1; margin-right : -0.5rem; margin-top : -0.5rem; height : 31rem; width : 31rem; }
+    90% { opacity : 1; margin-right : 0.2rem; margin-top : 0.2rem; height : 29.6rem; width : 29.6rem; }
     100% { opacity : 1; margin-right : 0; margin-top : 0; height : 30rem; width : 30rem; }
 }
 @keyframes circle-3 {
     0% { opacity : 0; margin-right : 7rem; margin-top : 7rem; height : 41rem; width : 41rem; }
+    80% { opacity : 1; margin-right : -0.5rem; margin-top : -0.5rem; height : 56rem; width : 56rem; }
+    90% { opacity : 1; margin-right : 0.2rem; margin-top : 0.2rem; height : 54.6rem; width : 54.6rem; }
     100% { opacity : 1; margin-right : 0; margin-top : 0;  height : 55rem; width : 55rem; }
 }
 @keyframes small-circle-3 {
     0% { opacity : 0; margin-right : 5rem; margin-top : 5rem; height : 30rem; width : 30rem; }
+    80% { opacity : 1; margin-right : -0.5rem; margin-top : -0.5rem; height : 41rem; width : 41rem; }
+    90% { opacity : 1; margin-right : 0.2rem; margin-top : 0.2rem; height : 39.6rem; width : 39.6rem; }
     100% { opacity : 1; margin-right : 0; margin-top : 0; height : 40rem; width : 40rem; }
 }
 @keyframes circle-4 {
     0% { opacity : 0; margin-right : 9rem; margin-top : 9rem; height : 52rem; width : 52rem; }
+    80% { opacity : 1; margin-right : -0.5rem; margin-top : -0.5rem; height : 71rem; width : 71rem; }
+    90% { opacity : 1; margin-right : 0.2rem; margin-top : 0.2rem; height : 69.6rem; width : 69.6rem; }
     100% {  opacity : 1; margin-right : 0; margin-top : 0; height : 70rem; width : 70rem; }
 }
 @keyframes small-circle-4 {
     0% { opacity : 0; margin-right : 6rem; margin-top : 6rem; height : 36rem; width : 36rem; }
+    80% { opacity : 1; margin-right : -0.5rem; margin-top : -0.5rem; height : 49rem; width : 49rem; }
+    90% { opacity : 1; margin-right : 0.2rem; margin-top : 0.2rem; height : 47.6rem; width : 47.6rem; }
     100% { opacity : 1; margin-right : 0; margin-top : 0; height : 48rem; width : 48rem; }
 }
 @keyframes planetarium-block{
@@ -47,7 +67,7 @@
 
 #first-block{
     animation:  title-in 250ms linear;
-    animation-delay: 1500ms;
+    animation-delay: 1200ms;
     animation-fill-mode: forwards;
     opacity : 0;
     position : relative;
@@ -184,33 +204,33 @@
             opacity : 0;
         }
         #circle-0{
-            animation : circle-0 2s cubic-bezier(0.6, 0.4, 0.6, 1.3);
+            animation : circle-0 2s cubic-bezier(0.6, 0.4, 0.6, 1.3) forwards;
             @media(max-width : 1023px){
-                animation : small-circle-0 2s cubic-bezier(0.6, 0.4, 0.6, 1.3);
+                animation : small-circle-0 2s cubic-bezier(0.6, 0.4, 0.6, 1.3) forwards;
             }
         }
         #circle-1{
-            animation : circle-1 2.1s cubic-bezier(0.6, 0.4, 0.6, 1.35);
+            animation : circle-1 2.1s cubic-bezier(0.6, 0.4, 0.6, 1.35) forwards;
             @media(max-width : 1023px){
-                animation : small-circle-1 2s cubic-bezier(0.6, 0.4, 0.6, 1.3);
+                animation : small-circle-1 2s cubic-bezier(0.6, 0.4, 0.6, 1.3) forwards;
             }
         }
         #circle-2{
-            animation : circle-2 2.2s  cubic-bezier(0.6, 0.4, 0.6, 1.4);
+            animation : circle-2 2.2s  cubic-bezier(0.6, 0.4, 0.6, 1.4) forwards;
             @media(max-width : 1023px){
-                animation : small-circle-2 2s cubic-bezier(0.6, 0.4, 0.6, 1.3);
+                animation : small-circle-2 2s cubic-bezier(0.6, 0.4, 0.6, 1.3) forwards;
             }
         }
         #circle-3{
-            animation : circle-3 2.3s cubic-bezier(0.6, 0.4, 0.6, 1.45);
+            animation : circle-3 2.3s cubic-bezier(0.6, 0.4, 0.6, 1.45) forwards;
             @media(max-width : 1023px){
-                animation : small-circle-3 2s cubic-bezier(0.6, 0.4, 0.6, 1.3);
+                animation : small-circle-3 2s cubic-bezier(0.6, 0.4, 0.6, 1.3) forwards;
             }
         }
         #circle-4{
-            animation : circle-4 2.4s  cubic-bezier(0.6, 0.4, 0.6, 1.5);
+            animation : circle-4 2.4s  cubic-bezier(0.6, 0.4, 0.6, 1.5) forwards;
             @media(max-width : 1023px){
-                animation : small-circle-4 2s cubic-bezier(0.6, 0.4, 0.6, 1.3);
+                animation : small-circle-4 2s cubic-bezier(0.6, 0.4, 0.6, 1.3) forwards;
             }
         }
     }
