--- a/src/app/pricing/pricing.component.less
+++ b/src/app/pricing/pricing.component.less
@@ -179,7 +179,7 @@
 
 #features{
     @{deep} h2{
-        margin : 0 !important;
+        margin: 0 0 0 2rem !important;
     }
     li{
         display : flex;
@@ -214,7 +214,7 @@
             color: #FFF;
             font-size: 0.8rem;
             height: 1.6rem;
-            line-height: 1.6rem;
+            line-height: 1.7rem;
             width: 1.6rem;
             text-align: center;
             vertical-align: middle;
