--- a/src/styles.less
+++ b/src/styles.less
@@ -91,7 +91,6 @@ button{
     cursor : pointer; 
     &:hover{
         background : #1EBAB7;
-        box-shadow: inset 0px 1px 2px 0px rgba(217,217,217,1);
         .chevron{
             margin: -1px 0.3rem 0 1.7rem;
         }
@@ -100,17 +99,11 @@ button{
     &.white{
         background-color: #FFF;
         color: @clr-blue;
-        border: 1px solid @clr-blue;   
-        &:hover{
-            box-shadow: inset 0px 1px 2px 0px @clr-blue;
-            .arrow{
-                margin: -1px 0.3rem 0 1.7rem;
-            }
-
-        }     
+        border: 1px solid @clr-blue;     
     }
     .chevron{
         margin: -1px 0 0 2rem;
+        transition : margin 100ms;
         
     }
    
