--- a/src/app/product/product.component.less
+++ b/src/app/product/product.component.less
@@ -282,7 +282,16 @@
         }
     }
 }
-
+@media(min-width: 1024px){
+    #everywhere{
+        @{deep} h2{
+            margin : 0
+        }
+       margin-left: 0;
+       margin-right : 0;
+       text-align: left;
+   }   
+}
 @media(max-width: 1023px){
       #everywhere{
           margin-top: 0;            
