--- a/src/app/product/product.component.less
+++ b/src/app/product/product.component.less
@@ -64,6 +64,24 @@
     0% { opacity : 0; }
     100% { opacity : 1; }
 }
+@keyframes product-in{
+    0% { opacity : 0; transform : translateY(2rem); }
+    100% { opacity : 1; transform : translateY(0); }
+}
+@keyframes background-product-in{
+    0% { opacity : 0;  }
+    100% { opacity : 1; }
+}
+@keyframes chat-in{
+    0% { opacity : 0; bottom : -100% }
+    100% { opacity : 1; bottom : -1rem; }
+}
+@keyframes message-in{
+    0% { opacity : 0; margin-bottom : -1rem; }
+    80% { opacity : 1; margin-bottom : 0.2rem; }
+    100% { opacity : 1; margin-top : 0; }
+}
+
 
 #first-block{
     animation:  title-in 250ms linear;
@@ -93,6 +111,7 @@
         }
         &:last-of-type{
             position : relative;
+            overflow : hidden;
         }
     }
 }
@@ -101,15 +120,9 @@
     margin-top : 17rem; 
     @media(max-width : 1023px){
         margin-top : 8rem;
-        p{
-            height : 15rem;
-        }
     }
     @media(max-width : 479px){
         margin-top : 0rem;
-        p{
-            height : 18rem;
-        }
     }
     [app-h2]  {
         @{deep} h2{
@@ -122,36 +135,102 @@
     }
 }
 
+
 .product{
     position : absolute;
     top: 7rem;
     left : 0;
     right : 0;
-    bottom : 0;
-    box-shadow: 0 1px 12px 0 rgba(222,222,222,0.5);
-    border: 1px solid #DEDEDE;
     border-radius: 4px;
-    &#product-1{
-        background : url("assets/images/product.png");
+    background-repeat : no-repeat !important;
+    &#product-1-1, &#product-mobile-1-1{
+        opacity : 0;
+        position : initial;
+        margin-top: 7rem;
+        animation : product-in 1s 200ms ease-in-out forwards;
+        @media(max-width : 1023px){
+            margin-top : 1rem;
+        }
     }
-    &#product-2{
-        background : url("assets/images/product.png");
+    &#product-1-2, &#product-mobile-1-2{
+        opacity : 0;
+        position : initial;
+        margin-top: 7rem;
+        animation : product-in 800ms 1000ms ease-in-out forwards;
+     
+    } 
+    &#product-2-1, &#product-mobile-2-1{
+        bottom : 0;
+        background-size: cover;
+        z-index : 0;
+        background-image : url("assets/images/product-2-1.svg");
+        animation : background-product-in 800ms ease-in-out forwards;
     }
-    &#product-3{
-        background : url("assets/images/product.png");
+    &#product-2-2, &#product-mobile-2-2{
+        top : auto;
+        bottom : -1rem;
+        z-index : 1;
+        opacity : 0;
+        animation : chat-in 800ms 1000ms ease-in-out forwards;
+        max-height: 70%;
+        
+    }
+    &#product-3-1, &#product-mobile-3-1{
+        bottom : 0;
+        background-size: cover;
+        z-index : 0;
+        background-image : url("assets/images/product-3-1.jpg");
+        animation : background-product-in 800ms ease-in-out forwards;
+    }
+    &#product-3-2, &#product-mobile-3-2{
+        bottom : 0;
+        z-index : 1;
+        background-image : url("assets/images/product-3-2.png");
+        animation : background-product-in 800ms ease-in-out forwards;
+    }
+    &#product-3-3, &#product-mobile-3-3{
+        top : auto;
+        bottom : -1rem;
+        z-index : 2;
+        opacity : 0;
+        max-height: 70%;
+        animation : chat-in 800ms 1000ms ease-in-out forwards;
+    }
+    &#product-3-4, &#product-mobile-3-4{
+        top : auto;
+        left : 1.5rem;
+        bottom : 20rem;
+        z-index : 3;
+        opacity : 0;
+        @media(max-width : 1023px){
+            bottom : 12rem;
+            max-width : 12rem;
+        }
+        animation : message-in 300ms 2300ms cubic-bezier(0.6, 0.4, 0.6, 1.3) forwards;
+    }
+    &#product-3-5, &#product-mobile-3-5{
+        top : auto;
+        left : 1.5rem;
+        bottom : 12rem;
+        z-index : 3;
+        opacity : 0;
+        @media(max-width : 1023px){
+            bottom : 7rem;
+            max-width : 12rem;
+        }
+        animation : message-in 300ms 3300ms cubic-bezier(0.6, 0.4, 0.6, 1.3) forwards;
     }
     &#product-4{
-        background : url("assets/images/product.png");
+        background-image : url("assets/images/product-2-1.svg");
     }
-    background-repeat : no-repeat;
-    @media(max-width: 1023px){
-       position : initial;
-       width : 100%;
-       max-width : 60rem;
-       margin : 0 auto;
-       height : 40rem;
-       background-position : 100% 100%;
-    }
+}
+
+.carousel-image{
+    width : 100%;
+    height : 40rem;
+    top : 0;
+    position : relative;
+    overflow : hidden;
 }
 
 .column-block{
