--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -71,17 +71,17 @@
 </div>
 <div class="block" id="our-pricing" app-fade-in [delay]='1500'>
     <p>
-        Any question about <b>our pricing</b>? Feel free to <b><u>contact us</u></b>, we're more than happy to help.
+        Any question about <b>our pricing</b>? Feel free to <a href="mailto:contact@thestudnet.com"><b><u>contact us</u></b></a>, we're more than happy to help.
     </p>
 </div>
 
 <div class='block' id='try-our-product' app-fade-in>
     <p>
         <b>You can try our product.</b><br/>
-        Start your 30-day free trial for one course today!
+        You can try <b>Twic</b> today. Start your free 30-dayntrial for one course !
     </p>
     <button class='button' [routerLink]="['/contact-us']">
-        Start 30-day free trial
+        Start free 30-day trial
     </button>
 </div>
 
@@ -90,7 +90,7 @@
         All features
     </div>
     <li>
-        <ul><span class="icon icon-checkmark"></span>State-of-the-art Learning Management system</ul>
+        <ul><span class="icon icon-checkmark"></span>State-of-the-art Learning Management System</ul>
         <ul><span class="icon icon-checkmark"></span>Collaborative learning and social networking tools</ul>
         <ul><span class="icon icon-checkmark"></span>Videoconferencing system</ul>
         <ul><span class="icon icon-checkmark"></span>Data collection and graphic analytics</ul>
