--- a/src/app/pricing/pricing.component.less
+++ b/src/app/pricing/pricing.component.less
@@ -132,6 +132,9 @@
     margin-bottom: 7rem;
     font-weight: 300;
     font-size: 1.6rem;
+    a, a:visited{
+        color : @clr-text;
+    }
     @media(max-width:479px){
         margin-bottom : 4rem;
     }
