--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -10,12 +10,12 @@
 <div class="block" id="first-paragraph" app-fade-in [delay]="2000">
     <p>
         In a more than ever connected world, we believe that innovation drives value creation through platforms, people and technology. <br/>
-        We believe at <b>Twic</b> thant &laquo;the world is a campus&raquo;.
+        We believe at <b>Twic</b> that &laquo;the world is a campus&raquo;.
     </p>
     <p>
         <b>Monaco</b> is where our very internationally diverse team happens to be. While home to over <b>140 nationalities</b>, the 
         <b>Principality of Monaco</b> has for many years been working towards and promoting a better world, placing the 
-        <b>United Nations Millenium Development Goals</b> at the heart of it's foreign policy.
+        <b>United Nations Millenium Development Goals</b> at the heart of its foreign policy.
 </div>
 <div class="block" id="adress" app-fade-in  [delay]="2000">
     <img class="twic-logo"  src="assets/images/Logo.svg"/>
