--- a/src/app/product/product.component.less
+++ b/src/app/product/product.component.less
@@ -138,99 +138,35 @@
 
 .product{
     position : absolute;
-    top: 7rem;
+    top: 12rem;
     left : 0;
     right : 0;
+    bottom : 0;
     border-radius: 4px;
     background-repeat : no-repeat !important;
-    &#product-1-1, &#product-mobile-1-1{
-        opacity : 0;
-        position : initial;
-        margin-top: 7rem;
-        animation : product-in 1s 200ms ease-in-out forwards;
-        @media(max-width : 1023px){
-            margin-top : 1rem;
-        }
+    background-size : cover;
+    &#product-1{
+        background-image: url("assets/images/lms_screen.jpg");
     }
-    &#product-1-2, &#product-mobile-1-2{
-        opacity : 0;
-        position : initial;
-        margin-top: 7rem;
-        animation : product-in 800ms 1000ms ease-in-out forwards;
-     
-    } 
-    &#product-2-1, &#product-mobile-2-1{
-        bottom : 0;
-        background-size: cover;
-        z-index : 0;
-        background-image : url("assets/images/product-2-1.svg");
-        animation : background-product-in 800ms ease-in-out forwards;
+    &#product-2{
+        background-image: url("assets/images/lms_screen_editor.jpg");
     }
-    &#product-2-2, &#product-mobile-2-2{
-        top : auto;
-        bottom : -1rem;
-        z-index : 1;
-        opacity : 0;
-        animation : chat-in 800ms 1000ms ease-in-out forwards;
-        max-height: 70%;
-        
-    }
-    &#product-3-1, &#product-mobile-3-1{
-        bottom : 0;
-        background-size: cover;
-        z-index : 0;
-        background-image : url("assets/images/product-3-1.jpg");
-        animation : background-product-in 800ms ease-in-out forwards;
-    }
-    &#product-3-2, &#product-mobile-3-2{
-        bottom : 0;
-        z-index : 1;
-        background-image : url("assets/images/product-3-2.png");
-        animation : background-product-in 800ms ease-in-out forwards;
-    }
-    &#product-3-3, &#product-mobile-3-3{
-        top : auto;
-        bottom : -1rem;
-        z-index : 2;
-        opacity : 0;
-        max-height: 70%;
-        animation : chat-in 800ms 1000ms ease-in-out forwards;
-    }
-    &#product-3-4, &#product-mobile-3-4{
-        top : auto;
-        left : 1.5rem;
-        bottom : 20rem;
-        z-index : 3;
-        opacity : 0;
-        @media(max-width : 1023px){
-            bottom : 12rem;
-            max-width : 12rem;
-        }
-        animation : message-in 300ms 2300ms cubic-bezier(0.6, 0.4, 0.6, 1.3) forwards;
-    }
-    &#product-3-5, &#product-mobile-3-5{
-        top : auto;
-        left : 1.5rem;
-        bottom : 12rem;
-        z-index : 3;
-        opacity : 0;
-        @media(max-width : 1023px){
-            bottom : 7rem;
-            max-width : 12rem;
-        }
-        animation : message-in 300ms 3300ms cubic-bezier(0.6, 0.4, 0.6, 1.3) forwards;
-    }
-    &#product-4{
-        background-image : url("assets/images/product-2-1.svg");
+    &#product-3{
+        background-image: url("assets/images/lms_screen_visio.jpg");
     }
 }
 
 .carousel-image{
     width : 100%;
-    height : 40rem;
+    height : 60rem;
     top : 0;
     position : relative;
     overflow : hidden;
+    .product{
+        background-size: contain;
+        background-position: 50%;
+        top : 0;
+    }
 }
 
 .column-block{
