--- a/src/app/shared/footer/footer.component.less
+++ b/src/app/shared/footer/footer.component.less
@@ -95,6 +95,10 @@
         line-height: 2.2rem;
         font-weight: bold;
         margin-bottom: 2rem;
+        a, a:visited{
+            color : #FFF;
+            text-decoration: none;
+        }
     }
     
     ul{
