Image product page

--- a/src/app/product/product.component.less
+++ b/src/app/product/product.component.less
@@ -112,6 +112,7 @@
         &:last-of-type{
             position : relative;
             overflow : hidden;
+            flex : 0 0 60.9rem;
         }
     }
 }
@@ -125,6 +126,7 @@
         margin-top : 0rem;
     }
     [app-h2]  {
+        margin : 5rem 0 4rem;
         @{deep} h2{
             margin : 0 ;
             @media(max-width : 1023px){
@@ -138,10 +140,10 @@
 
 .product{
     position : absolute;
-    top: 12rem;
+    top: 7rem;
     left : 0;
     right : 0;
-    bottom : 0;
+    height : 71rem;
     border-radius: 4px;
     background-repeat : no-repeat !important;
     background-size : cover;
@@ -170,7 +172,7 @@
 }
 
 .column-block{
-    padding : 2rem;
+    padding : 2rem 1rem;
     cursor : pointer;
     @media(max-width: 1023px){
         text-align : center;       
@@ -194,6 +196,7 @@
     p{
         font-size: 1.4rem;
         line-height: 2.6rem;
+        margin-bottom: 0;
     }
 }
 
