--- a/src/app/product/product.component.less
+++ b/src/app/product/product.component.less
@@ -167,7 +167,7 @@
     .product{
         background-size: contain;
         background-position: 50%;
-        top : 0;
+        top : 1rem;
         height : 60rem;
     }
 }
