Product images responsive

--- a/src/app/product/product.component.less
+++ b/src/app/product/product.component.less
@@ -126,7 +126,7 @@
         margin-top : 0rem;
     }
     [app-h2]  {
-        margin : 5rem 0 4rem;
+        margin : 5rem 0 3rem;
         @{deep} h2{
             margin : 0 ;
             @media(max-width : 1023px){
@@ -155,6 +155,9 @@
     }
     &#product-3{
         background-image: url("assets/images/lms_screen_visio.jpg");
+    }
+    &#product-4{
+        background-image: url("assets/images/lms_screen_data.jpg");
     }
 }
 
