--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -2,8 +2,9 @@
 
 @keyframes circle {
     0% { opacity : 0; margin-right:-40rem; margin-top : -40rem; }
-    80% { opacity : 1; margin-right : 0.5rem; margin-top : 0.5rem;  }
-    90% { opacity : 1; margin-right : -.2rem; margin-top : -.2rem;  }
+    80% { opacity : 1; margin-right : 2rem; margin-top : 2rem;  }
+    90% { opacity : 1; margin-right : -1rem; margin-top : -1rem;  }
+    95% { opacity : 1; margin-right : .5rem; margin-top : .5rem;  }
     100% { opacity : 1; margin-right : 0; margin-top : 0;  }
 }
 
@@ -19,7 +20,7 @@
     @{deep} .circle{
         margin-right:-40rem; 
         margin-top : -40rem;
-        animation : circle 6s 500ms cubic-bezier(0.6, 0.4, 0.6, 1.3) forwards;
+        animation : circle 6s 500ms ease-in-out forwards;
         &#circle-1{ animation-delay: 600ms;}
         &#circle-2{ animation-delay: 700ms;}
         &#circle-3{ animation-delay: 800ms;}
