Disable vertical swipe on carousel

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -15,7 +15,7 @@
             <a target="_blank" href="https://play.google.com/store/apps/details?id=com.thestudnet.app">Download App Android</a>
             <div>Status</div>
             <div>
-                <img class="footer-logo" src="assets/images/Logo-white.png"/>
+                <img class="footer-logo" src="assets/images/Logo-white.svg"/>
                 <p>
                     Copyright © 2017, Twic by THE STUDNET.
                 </p>
